Updating presentation for JDK 21